- improved paper and citing instructions

--- a/doc/paper/ms.bib
+++ b/doc/paper/ms.bib
@@ -396,3 +396,14 @@ number = {4}
 	pages={69--81},
 	year={2021}
 }
+
+
+@inproceedings{piga2021a,
+  title={Deep learning with transfer functions:
+            new applications in system identification},
+  author={Piga, D. and Forgione, M. and Mejari, M.},
+  booktitle={Proc. of the 19th IFAC Symposium System Identification:
+                learning models for decision and control},
+  address={Padua, Italy},
+  year={2021}
+}
