--- a/doc/paper/ms.tex
+++ b/doc/paper/ms.tex
@@ -74,6 +74,7 @@ The operator enables end-to-end training of structured networks containing linea
   author={Piga, D. and Forgione, M. and Mejari, M.},
   booktitle={Proc. of the 19th IFAC Symposium System Identification:
                 learning models for decision and control},
+  address={Padua, Italy},
   year={2021}
 }
 \end{verbatim}
@@ -95,6 +96,7 @@ Using the plain bibtex style, the bibliographic entry should look like:\\ \\
 
 \section{Introduction}
 
+%\cite{piga2021a}
 
 Thanks to  the universal approximation capabilities of neural networks, deep learning algorithms are nowadays behind high-impact cutting-edge technologies such as language translation, speech recognition, and autonomous driving, just to cite a few \cite{schmidhuber2015deep}. Highly optimized and user-friendly deep learning frameworks are available \cite{paszke:2017automatic}, often distributed under permissive open-source licenses.
 On one hand, using the high-level functionalities offered by a deep learning framework, standard learning tasks (once considered extremely hard) such as image classification can be accomplished with moderate efforts even by non-expert practitioners. On the other hand, experienced users can build customized models and objective functions,
