--- a/doc/paper/ms.tex
+++ b/doc/paper/ms.tex
@@ -74,7 +74,7 @@ The operator enables end-to-end training of structured networks containing linea
   author={Piga, D. and Forgione, M. and Mejari, M.},
   booktitle={Proc. of the 19th IFAC Symposium System Identification:
                 learning models for decision and control},
-  address={Padua, Italy},
+  address={Padova, Italy},
   year={2021}
 }
 \end{verbatim}
@@ -82,7 +82,7 @@ The operator enables end-to-end training of structured networks containing linea
 Using the plain bibtex style, the bibliographic entry should look like:\\ \\
 \textsf{D. Piga, M. Forgione and M. Mejari Deep learning with transfer functions: new applications in system identification.} 
  In \textit{Proc. of the 19th IFAC Symposium System Identification: learning models for decision and control}, 
- Padua, Italy, 2021.
+ Padova, Italy, 2021.
 
 \noindent\rule{\textwidth}{1pt}
 
