- added paper and citing instructions

--- a/doc/paper/ms.bib
+++ b/doc/paper/ms.bib
@@ -285,7 +285,7 @@ organization = "The Organization",
 @article{chen1992neural,
 	title={Neural networks for nonlinear dynamic system modelling and identification},
 	author={Chen, SABS and Billings, SA},
-	journal={International journal of control},
+	journal={International {J}ournal of {C}ontrol},
 	volume={56},
 	number={2},
 	pages={319--346},
